[package]
name = "terminal-pong"
version = "0.1.0"
edition = "2021"

[dependencies]
crossterm = "0.27.0"
rand = "0.8.4"
serde = { version = "1.0", features = ["derive"] }
serde-protobuf = "0.8.2"
protobuf = "3.4.0"
tokio = "1.37.0"
clap = "4.5.4"

[build-dependencies]
protobuf-codegen = "3"
protoc-rust = "^2.0"
